--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Crete+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amethysta|Anton|Bungee+Shade|Cabin+Sketch|Crete+Round|Sarala" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
